# cs122a_p1

./: CMakeLists.txt  main.c  pins.h  sm_adc.c  sm_adc.h  sm_color.c  sm_color.h  sm_error.c  sm_error.h  sm_led.c  sm_led.h  sm_pattern.c  sm_pattern.h  task.c  task.h  ws2812b.c  ws2812b.h  ws2812b.pio
kicad/: rgb-shoes.kicad_prl  rgb-shoes.kicad_pro  rgb-shoes.kicad_sch
